# BNL

./: .gitignore  .gitmodules  README.md  test2.txt
docker_image/: Dockerfile  docker_python_venv.bash  ros_entrypoint.sh
private_docker/: Dockerfile  ros_entrypoint.sh
ros_package/: CMakeLists.txt  package.xml
ros_root/: CMakeLists.txt  package.xml
src/sim_folder/install/: local_setup.sh  setup.sh
src/sim_folder/log/: latest_build
src/wg_bringup/: bnl_startup.sh  setup.cfg  setup.py
src/wg_bringup/launch/: Nav2_bringup.py  rviz_launch.py  slam_launch.py  wg.launch.py
src/wg_bt_translation/: CMakeLists.txt  package.xml  plugin.xml
src/wg_bt_translation/src/: bt_translation.cpp
src/wg_control_center/: setup.cfg  setup.py
src/wg_control_center/control_center/: control_code.py
src/wg_controller_gui/: package.xml  setup.cfg  setup.py
src/wg_controller_gui/wg_controller_gui/: controller_gui.py
src/wg_interface/: CMakeLists.txt  package.xml
src/wg_interface/msg/: ControlEvent.msg
src/wg_interface/srv/: BearStatus.srv
src/wg_motor_encoder/: package.xml  setup.cfg  setup.py
src/wg_motor_encoder/wg_motor_encoder/: wg_encoder.py
src/wg_navigation/: package.xml  setup.cfg  setup.py
src/wg_navigation/params/: bt_bear_exploration.xml  (+3 more)
src/wg_picamera/: camera_wrapper.sh  setup.cfg  setup.py
src/wg_sensor_pullup/: setup.cfg  setup.py
src/wg_test_pwm/: package.xml  pwm_wrapper.sh  setup.cfg  setup.py
src/wg_udp_package/: package.xml  setup.cfg  setup.py
src/wg_utilities/: setup.cfg  setup.py
src/wg_yolo_package/: setup.py  yolo_wrapper.sh
(+149 files in other folders)
